opam-version: "2.0"
name: "ges"
version: "0.1.0"
maintainer: "Manas <prometheansacrifice@gmail.com>"
authors: "Manas <prometheansacrifice@gmail.com>"
synopsis: "Bindings for GES"
description: "Bindings for GES"
homepage: "https://github.com/prometheansacrifice/ges-bindings-ocaml"
bug-reports: "https://github.com/prometheansacrifice/ges-bindings-ocaml"
license: "GPL3"
dev-repo: "git+https://github.com/prometheansacrifice/ges-bindings-ocaml"
build: [
  ["dune" "build" "-j" jobs "--profile" "production"]
  ["exit 0"]
]
depends: [
  "dune" {build}
  "gi-bindings-generator" {build}
  "gobject-introspection" {build}
]
