(rule
 (targets Layer.mli Layer.ml Error.ml Error.mli Timeline.ml Timeline.mli)
 (deps    ../gen/gen.exe)
 (action  (run %{deps} -o %{targets})))

(rule
 (targets c_flags.sexp
            c_library_flags.sexp)
  (deps    ../configurator/discover.exe)
  (action  (run %{deps})))




(library
 (name        GES)
  (public_name ges)
  (libraries ctypes ctypes.foreign)
  (c_names         dyn_load_constants_stubs)
  (c_flags         (:include c_flags.sexp))
  (c_library_flags (:include c_library_flags.sexp))
  (ocamlopt_flags (-ccopt ("-Wl,-no-as-needed")))
 )
